Fix footer overlapped 404.html. Next is changing nav bar UI.

--- a/Y13-DTP/static/css/style.css
+++ b/Y13-DTP/static/css/style.css
@@ -13,6 +13,8 @@ html, body {
 
 .container {
   flex: 1;
+  display: flex;
+  flex-direction: column;
   margin-top: 60px;
 }
 
@@ -63,7 +65,7 @@ html, body {
 }
 
 .logo-text a:hover {
-  color: red;
+  color: #fff;
 }
 
 /* Navigation */
@@ -98,7 +100,7 @@ html, body {
 }
 
 .nav ul li a:hover {
-  color: red;
+  color: #7f00ff;
 }
 
 /* Footer */
@@ -312,16 +314,14 @@ textarea {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 60px); /* Adjust for header height */
+  flex: 1; /* Allow it to grow and take available space */
   text-align: center;
   padding: 20px;
-  margin-bottom: 100px; /* Add margin to ensure footer does not overlap */
 }
 
 .image404 {
   max-width: 100%;
-  height: auto;
-  margin-bottom: 20px;
+  height: auto; 
 }
 
 .text404 {
